@@ -5,11 +5,13 @@ import jakarta.servlet.*;
 import jakarta.servlet.http.*;
 import org.springframework.lang.NonNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
@@ -33,11 +35,12 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
             if (jwtProvider.validateToken(token)) {
                 Long userId = jwtProvider.getUserId(token);
+                String role = jwtProvider.getRole(token);
 
                 var auth = new UsernamePasswordAuthenticationToken(
                         userId,
                         null,
-                        Collections.emptyList()
+                        List.of(new SimpleGrantedAuthority(role))
                 );
 
                 SecurityContextHolder.getContext().setAuthentication(auth);
